--- a/Чернышев_БИК_2_ЛР1.ipynb
+++ b/Чернышев_БИК_2_ЛР1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNI3ETtpK5N9ypp3C5Hw3zG",
+      "authorship_tag": "ABX9TyNNc8yUNdtTLkyqBW4HLXcT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,16 +56,17 @@
         "b = 2\n",
         "c = a + b\n",
         "print(c)\n",
-        "print(a+b)"
+        "print(a+b)\n",
+        "6"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DX5RgoeNDs-e",
-        "outputId": "34efedcf-37a1-4042-e55d-9ff54bf4055e"
+        "outputId": "a53467ca-fd26-4284-d274-2e995e9a7b03"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,6 +75,16 @@
             "3\n",
             "3\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -83,6 +94,15 @@
       "metadata": {
         "id": "YTuQ923hCaM_"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZBJxOlQAKGrn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
